--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "px-list-bare-design",
   "version": "0.0.1",
   "authors": [
-    "General Electric"
+    "General Electric",
+    "Harry Roberts <harry@csswizardry.com>"
   ],
   "description": "A simple object to remove bullets and indents from lists",
   "main": "_objects.list-bare.scss",
