--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-list-bare-design",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "authors": [
     "General Electric",
     "Harry Roberts <harry@csswizardry.com>"
@@ -24,7 +24,10 @@
     "tests"
   ],
   "dependencies": {
-    "px-defaults-design": "git://github.sw.ge.com/PXd/px-defaults-design.git#~0.1.0",
-    "px-functions-design": "git://github.sw.ge.com/PXd/px-functions-design.git#~0.1.0"
+    "px-defaults-design": "git://github.sw.ge.com/PXd/px-defaults-design.git#~0.1.0"
+  },
+  "devDependencies": {
+    "px-code-design": "git://github.build.ge.com/PXd/px-code-design.git#~0.1.0",
+    "px-starter-kit-design": "git://github.build.ge.com/PXd/px-starter-kit-design.git#~0.2.0"
   }
 }
