--- a/bower.json
+++ b/bower.json
@@ -1,36 +1,38 @@
 {
-    "name": "px-list-bare-design",
-    "version": "0.3.3",
-    "authors": [
-        "General Electric",
-        "Harry Roberts <harry@csswizardry.com>"
-    ],
-    "description": "A simple object to remove bullets and indents from lists",
-    "main": "_objects.list-bare.scss",
-    "keywords": [
-        "sass",
-        "px",
-        "bare",
-        "lists"
-    ],
-    "homepage": "https://github.com/PredixDev/px-list-bare-design.git",
-    "private": false,
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "sass",
-        "scripts",
-        ".github",
-        "gulpfile.js",
-        "OSS_Notice.pdf",
-        "sassdoc.json"
-    ],
-    "dependencies": {
-        "px-defaults-design": "^1.0.2"
-    },
-    "devDependencies": {
-        "px-sass-doc": "^0.3.0",
-        "px-starter-kit-design": "^0.7.0"
-    }
+  "name": "px-list-bare-design",
+  "version": "0.3.4",
+  "authors": [
+    "General Electric",
+    "Harry Roberts <harry@csswizardry.com>"
+  ],
+  "description": "A simple object to remove bullets and indents from lists",
+  "main": "_objects.list-bare.scss",
+  "keywords": [
+    "sass",
+    "px",
+    "bare",
+    "lists"
+  ],
+  "homepage": "https://github.com/PredixDev/px-list-bare-design.git",
+  "private": false,
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "sass",
+    "*.md",
+    "scripts",
+    "github",
+    "gulpfile.js",
+    "monogram-wdmk.png",
+    "wct.conf.json",
+    "test"
+  ],
+  "dependencies": {
+    "px-defaults-design": "^1.0.2"
+  },
+  "devDependencies": {
+    "px-starter-kit-design": "^0.7.0",
+    "px-sass-doc": "^0.4.3"
+  }
 }
