--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "px-list-bare-design",
-  "version": "1.0.3",
   "description": "A simple object to remove bullets and indents from lists",
-  "private": false,
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "keywords": [
+    "sass",
+    "px",
+    "bare",
+    "lists"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/PredixDev/px-list-bare-design.git"
+  },
+  "homepage": "https://github.com/PredixDev/px-list-bare-design.git",
+  "name": "px-list-bare-design",
+  "version": "1.0.3",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "General Electric",
   "dependencies": {
@@ -36,5 +42,11 @@
     "stream-combiner2": "^1.1.1",
     "yargs": "^5.0.0"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "resolutions": {
+    "inherits": "2.0.3",
+    "samsam": "1.1.3",
+    "supports-color": "3.1.2",
+    "type-detect": "1.0.0"
+  }
 }
